manifests/deployment.yml
apiVersion : v1
kind: Deployment
metadata:
  name: pjangamazurepoc 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pjangamazurepoc 
    spec:
      containers:
        - name: pjangamazurepoc 
          image: akspochelloworld.azurecr.io/pjangamazurepoc
          ports:
          - containerPort: 80
