manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: pjangamazurepoc
spec:
    type: ClusterIP
    ports:
    - port: 80 
    selector:
        app: pjangamazurepoc
