manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
     - http:
        paths:
          - path: /weather
            backend:
              serviceName: pjangamazurepoc
              servicePort: 80
